[package]
name = "https-everywhere-rust-test-implementation"
version = "0.1.0"
authors = ["William Budington <bill@eff.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
https-everywhere-lib-core = { path = "lib-core" }
simple_logger = "1.0"
